# gauc

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md
.travis/: install.sh
benchmarks/: test-get.sh
examples/: couchbase.rs  hello_world.rs  hello_world_upsert_sync.rs  parallel_get.rs
src/: helloworld.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/callback/: get.rs  mod.rs  store.rs
src/cli/cmd/: add.rs  append.rs  empty.rs  exit.rs  get.rs  info.rs  mod.rs  prepend.rs  remove.rs  replace.rs  set.rs  store.rs  unknown.rs  upsert.rs
src/client/: client.rs  client2.rs  mod.rs
src/client/callback/: callback_get.rs
src/couchbase/: funcs.rs  lcb.rs  mod.rs
src/couchbase/types/: callback_type.rs  cmd_base.rs  cmd_get.rs  cmd_store.rs  contig_buf.rs  contiguous_buffer.rs  create_st.rs  create_st3.rs  error_type.rs  handle_type.rs  instance.rs  key_buf.rs  key_buffer.rs  kv_buf_type.rs  kv_buffer_type.rs  mod.rs  operation.rs  resp_base.rs  resp_flags.rs  resp_get.rs  response_get.rs  response_store.rs
src/couchbase/types/cmd/: base.rs  get.rs  mod.rs  remove.rs  store.rs  view_query.rs
src/couchbase/types/response/: base.rs  flags.rs  get.rs  mod.rs  remove.rs  store.rs  view_query.rs
src/web/: mod.rs
src/web/handler/bucket/: mod.rs
src/web/handler/bucket/doc/: add.rs  append.rs  delete.rs  get.rs  mod.rs  prepend.rs  replace.rs  set.rs  upsert.rs
tests/: client2_test.rs  client_test.rs
