[package]
name = "gauc"
version = "0.1.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]

[dependencies]
cargo-count = "*"
cargo-graph = "*"
cargo-multi = "*"
cargo-outdated = "*"
clap = "*"
env_logger = "0.3.5"
libc = "0.2.16"
log = "0.3.6"

[lib]
name = "gauc"
path = "src/lib.rs"

[[bin]]
name = "gauc"
doc = false
path = "src/main.rs"
