[package]
name = "gauc"
version = "0.1.1"
authors = ["Tomas Korcak <korczis@gmail.com>"]

description = "Couchbase Rust Adapter / CLI"

# These URLs point to more information about the repository.
documentation = "https://github.com/korczis/gauc"
homepage = "https://github.com/korczis/gauc"
repository = "https://github.com/korczis/gauc"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["couchbase", "database"]

license = "MIT"

[dependencies]
clap = ">= 2.14.0"
env_logger = ">= 0.3.5"
libc = ">= 0.2.16"
log = ">= 0.3.6"

[lib]
name = "gauc"
path = "src/lib.rs"

[[bin]]
name = "gauc"
doc = false
path = "src/main.rs"
